changed logo image and text to white

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </video>
         -->
         <div class="sidebar-logo">
-            <img class=logo-img src="imgs/logo.png" alt="site logo">
+            <img class=logo-img src="imgs/logo-white.png" alt="site logo">
             <div class=logo-text>blep.</div>
         </div>
         <div class=logo-attribution><a href="https://www.flaticon.com/free-icons/cat" title="cat icons">Cat icons created by Victoruler - Flaticon</a></div>
