changed flavour text, adjustments to resizing functionality

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <div class="sidebar">
-      <!--   <video autoplay muted loop id="catvid">
+        <!--   <video autoplay muted loop id="catvid">
             <source src="./imgs/sploot.mp4" type="video/mp4">
         </video>
         -->
@@ -19,13 +19,15 @@
             <img class=logo-img src="imgs/logo-white.png" alt="site logo">
             <div class=logo-text>blep.</div>
         </div>
-        <div class=logo-attribution><a href="https://www.flaticon.com/free-icons/cat" title="cat icons">Cat icons created by Victoruler - Flaticon</a></div>
+        <div class=logo-attribution><a href="https://www.flaticon.com/free-icons/cat" title="cat icons">Cat icons
+                created by Victoruler - Flaticon</a></div>
     </div>
 
     <div class="main">
         <div class="top">
-            <p class="main-text">This is not a real online service! You know you need something like this in your life
-                to help you realise your deepest dreams.</p>
+            <!--https://en.wiktionary.org/wiki/blep-->
+            <p class="main-text">blep, To extend the tongue beyond the lips, seemingly for no reason, without
+                opening the mouth fully. <a class=learn-more href="https://www.reddit.com/r/Blep/"><em>Learn more</em></a></p>
             <p class="main-text-flavour">Sign up <em>now</em> to get started.</p>
             <p class="sub-text">You <em>know</em> you want to.</p>
         </div>
@@ -33,18 +35,24 @@
             <form action="">
                 <div class="sign-up-form">
                     <div class=form-title>Let's do this!</div>
-                    <div class="form-input"><label for="fname">FIRST NAME *</label><input type="text" name="fname" id="fname" required></div>
-                    <div class="form-input"><label for="lname">LAST NAME *</label><input type="text" name="lname" id="lname" required></div>
-                    <div class="form-input"><label for="email">EMAIL *</label><input type="email" name="email" id="email" required></div>
-                    <div class="form-input"><label for="phone">PHONE NUMBER</label><input type="tel" name="phone" id="phone"></div>
-                    <div class="form-input"><label for="password">PASSWORD *</label><input type="password" name="password" id="password" required>
+                    <div class="form-input"><label for="fname">FIRST NAME *</label><input type="text" name="fname"
+                            id="fname" required></div>
+                    <div class="form-input"><label for="lname">LAST NAME *</label><input type="text" name="lname"
+                            id="lname" required></div>
+                    <div class="form-input"><label for="email">EMAIL *</label><input type="email" name="email"
+                            id="email" required></div>
+                    <div class="form-input"><label for="phone">PHONE NUMBER</label><input type="tel" name="phone"
+                            id="phone"></div>
+                    <div class="form-input"><label for="password">PASSWORD *</label><input type="password"
+                            name="password" id="password" required>
                     </div>
-                    <div class="form-input"> <label for="passwordConfirm">CONFIRM PASSWORD *</label><input type="password"
-                            name="passwordConfirm" id="passwordConfirm" required> 
+                    <div class="form-input"> <label for="passwordConfirm">CONFIRM PASSWORD *</label><input
+                            type="password" name="passwordConfirm" id="passwordConfirm" required>
                     </div>
                 </div>
 
-                <div class=sign-up-button-container><button type="submit">Create Account</button><div>
+                <div class=sign-up-button-container><button type="submit">Create Account</button>
+                    <div>
             </form>
             <div class="sign-up-text">Already have an account? <a href="">Log in</a></div>
         </div>
